Add LinkedIn and MIERUNE links to index.html

--- a/index.html
+++ b/index.html
@@ -98,8 +98,10 @@ ul.task-list li input[type="checkbox"] {
 </div>
 <div class="g-col-12 g-col-sm-6">
 <ul>
-<li><a href="./about.html">about</a></li>
 <li><a href="https://github.com/yutannihilation/">github</a></li>
+<li><a href="https://www.linkedin.com/in/yutannihilation">linkedin</a></li>
+<li><a href="https://www.mierune.co.jp/">MIERUNE Inc.</a></li>
+<li><a href="./about.html">about (ja)</a></li>
 <li><a href="https://yutani.rbind.io/">blog (en)</a></li>
 <li><a href="https://notchained.hatenablog.com/">blog (ja)</a></li>
 </ul>
